manifest/authn-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: authn-service
  namespace: foo
spec:
  hosts:
  - authn-service
  ports:
  - number: 5000
    name: http
    protocol: HTTP
  resolution: STATIC
  endpoints:
  - address: 127.0.0.1
  location: MESH_EXTERNAL
