manifest/bootstrap-tmpl.yaml
admin:
  accessLogPath: /dev/null
  address:
    socketAddress:
      address: 0.0.0.0
      portValue: 19000
staticResources:
  clusters:
  - name: upstream
    connect_timeout: 1s
    type: LOGICAL_DNS
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: httpbin.org
    load_assignment:
      cluster_name: upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: httpbin.org
                port_value: 443
  - name: authn-service
    connectTimeout: 1s
    type: LOGICAL_DNS
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: postman-echo.com
    load_assignment:
      cluster_name: upstream
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: postman-echo.com
                port_value: 443
  listeners:
  - name: upstream
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 8080
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          statPrefix: ingress_http
          routeConfig:
            name: upstream_route
            virtualHosts:
            - name: upstream_service
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: upstream
          httpFilters:
          - name: envoy.filters.http.router
